# varint

./: .clang-format  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  index.html
.travis/: install.sh  run-script.sh
cmake/: utils.cmake
cmake/modules/: CodeCoverage.cmake
doc/: Doxyfile.in
docs/: BasicSet_8hpp_source.html  Codec_8hpp_source.html  CollectionHelper_8hpp_source.html  Common_8hpp_source.html  CompressedDeltaChunkTests_8cpp.html  CompressedDeltaChunkTests_8cpp__incl.map  CompressedDeltaChunkTests_8cpp__incl.md5  CompressedDeltaChunk_8hpp_source.html  CompressedSetTests_8cpp.html  CompressedSetTests_8cpp__incl.map  CompressedSetTests_8cpp__incl.md5  CompressedSet_8hpp_source.html  DeltaChunkStore_8hpp_source.html  LazyAndNotSet_8hpp_source.html  LazyAndSetTests_8cpp.html  LazyAndSetTests_8cpp__incl.map  LazyAndSetTests_8cpp__incl.md5  LazyAndSet_8hpp_source.html  LazyOrSetTests_8cpp.html  LazyOrSetTests_8cpp__incl.map  LazyOrSetTests_8cpp__incl.md5  LazyOrSet_8hpp_source.html  SanityCheck_8cpp.html  SanityCheck_8cpp__incl.map  SanityCheck_8cpp__incl.md5  Set_8hpp_source.html  Sink_8hpp_source.html  Source_8hpp_source.html  annotated.html  classBasicSet-members.html  classBasicSet.html  classBasicSet_1_1Iterator-members.html  classBasicSet_1_1Iterator.html  classBasicSet_1_1Iterator__inherit__graph.map  classBasicSet_1_1Iterator__inherit__graph.md5  classBasicSet__coll__graph.map  classBasicSet__coll__graph.md5  classCodec-members.html  classCodec.html  classCompressedDeltaChunk-members.html  (+78 more)
docs/search/: all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  classes_5.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  searchdata.js
include/varint/: BasicSet.h  BasicSet.hpp  Codec.h  Codec.hpp  Common.h  Common.hpp  CompressedDeltaChunk.h  CompressedDeltaChunk.hpp  CompressedSet.h  CompressedSet.hpp  DeltaChunkStore.h  DeltaChunkStore.hpp  LazyAndNotSet.h  LazyAndNotSet.hpp  LazyAndSet.h  LazyAndSet.hpp  LazyOrSet.h  LazyOrSet.hpp  Set.h  Set.hpp  Sink.h  Sink.hpp  Source.h  Source.hpp  varint.hpp
src/: BasicSet.cpp  CollectionHelper.h  CollectionHelper.hpp  CompressedDeltaChunk.cpp  CompressedSet.cpp  ConsiseSet.hpp  LazyAndSet.cpp  LazyOrSet.cpp
test/: BasicSetTests.cpp  CMakeLists.txt  CompressedDeltaChunkTests.cpp  CompressedSetTests.cpp  LazyAndSetTests.cpp  LazyOrSetTests.cpp  SanityCheck.cpp  sanity_check.cpp
